[add] Style basic and .gitignore

--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>Denuncialo!</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 	<header>
 		<h1>
-			<a href="index.html">
-				<img src="logo.jpg" alt="Denuncialo!">
-			</a>
+			Denuncialo
 		</h1>
-		<nav>
+		<nav class="right">
 			<ul>
 				<li><a href="#">Comenzar</a></li>
 				<li><a href="#">Ejemplos</a></li>
@@ -26,7 +24,11 @@
 	<section class="wrap">
 		<h2 class="phrase">Denuncia y Difunde</h2>	
 		<article>
-			<img class="big_img" src="" alt="">
+			<figure>
+				<img class="big_img" src="" alt="">
+				<figcaption>Mi imagen</figcaption>
+			</figure>
+			
 		</article>
 		<article class="right">
 			<strong class="title">Denuncia y Difunde</strong>
