[add] Finish style and install assets

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>Denuncialo!</title>
+	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 	<header>
-		<h1>
-			Denuncialo
+		<h1 class="left">
+			<strong>Denuncia</strong>lo
 		</h1>
 		<nav class="right">
 			<ul>
@@ -22,22 +23,22 @@
 		</nav>
 	</header>
 	<section class="wrap">
-		<h2 class="phrase">Denuncia y Difunde</h2>	
-		<article>
+		<h2 class="phrase">¡Denuncia y Difunde!</h2>
+
+		<article class="section">
 			<figure>
-				<img class="big_img" src="" alt="">
-				<figcaption>Mi imagen</figcaption>
+				<img class="big_img" src="assets/img/image.jpg" alt="Denuncia!">
 			</figure>
-			
 		</article>
-		<article class="right">
-			<strong class="title">Denuncia y Difunde</strong>
+
+		<article class="section right">
+			<h3>Denuncia y Difunde</h3>
 
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam corporis cupiditate perspiciatis exercitationem, nam similique debitis porro fugit, consectetur vel maiores minus pariatur dolores facere, est repudiandae. Mollitia, ab, obcaecati!</p>
 
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus commodi optio, quam, ducimus quas magnam aut molestias deserunt, earum officia totam iure. Veritatis aperiam sunt maxime accusamus, esse dolorem ex?</p>
 
-			<button class="play">Como funciona <i class="fa fa-play"></i></button>
+			<button class="play">Como funciona <i class="fa fa-play-circle-o"></i></button>
 		</article>
 	</section>
 </body>
